--- a/src/taskpane.html
+++ b/src/taskpane.html
@@ -20,12 +20,19 @@
       </div>
     </header>
 
-    <section class="card meta">
-      <div>
-        <h2>Managed Endpoint</h2>
-        <p class="muted">This add-in uses an organization-managed analysis endpoint.</p>
+    <section class="card gauge-card">
+      <div class="gauge-header">
+        <h2>Phishing Gauge</h2>
+        <span id="gauge-verdict" class="gauge-verdict muted">Awaiting analysis</span>
       </div>
-      <div class="pill">Locked</div>
+      <div class="gauge" data-state="idle">
+        <div class="gauge-arc"></div>
+        <div class="gauge-needle"></div>
+        <div class="gauge-labels">
+          <span>Safe</span>
+          <span>Phishing</span>
+        </div>
+      </div>
       <input id="api-url" type="url" value="https://cleardrop.wit-software.com/analyze" readonly hidden />
     </section>
 
