--- a/src/taskpane.html
+++ b/src/taskpane.html
@@ -19,6 +19,9 @@
         <span class="helper">Results stay within your organization.</span>
       </div>
     </header>
+    <div class="version-row">
+      <span class="version-pill" id="ui-version">v0.1.0</span>
+    </div>
 
     <section class="card gauge-card">
       <div class="gauge-header">
