--- a/src/taskpane.html
+++ b/src/taskpane.html
@@ -23,25 +23,27 @@
       <span class="version-pill" id="ui-version">v0.1.0</span>
     </div>
 
-    <section class="card gauge-card">
-      <div class="gauge-header">
-        <h2>Phishing Gauge</h2>
-        <span id="gauge-verdict" class="gauge-verdict muted">Awaiting analysis</span>
+    <section class="card verdict-card" data-state="idle">
+      <div class="verdict-header">
+        <h2>Phishing Status</h2>
+        <span id="verdict-pill" class="verdict-pill neutral">Awaiting analysis</span>
       </div>
-      <div class="gauge" data-state="idle">
-        <div class="gauge-arc"></div>
-        <div class="gauge-needle"></div>
-        <div class="gauge-labels">
-          <span>Safe</span>
-          <span>Phishing</span>
+      <div class="verdict-body">
+        <div class="verdict-icon" aria-hidden="true">●</div>
+        <div>
+          <div id="verdict-title" class="verdict-title">No scan yet</div>
+          <div id="verdict-subtitle" class="verdict-subtitle muted">Run an analysis to see the verdict.</div>
         </div>
       </div>
       <input id="api-url" type="url" value="https://cleardrop.wit-software.com/analyze" readonly hidden />
     </section>
 
-    <section class="card result-card">
+    <div class="result-toggle">
+      <button id="toggle-result" class="ghost">See reasoning</button>
+    </div>
+    <section class="card result-card is-hidden" id="result-card">
       <div class="result-header">
-        <h2>Result</h2>
+        <h2>Reasoning</h2>
         <span id="status" class="status muted">Ready.</span>
       </div>
       <pre id="result" class="result" aria-live="polite"></pre>
