--- a/src/taskpane.html
+++ b/src/taskpane.html
@@ -35,6 +35,10 @@
           <div id="verdict-subtitle" class="verdict-subtitle muted">Run an analysis to see the verdict.</div>
         </div>
       </div>
+      <div class="reasoning-panel" id="reasoning-panel" hidden>
+        <div class="reasoning-title">Why this email was flagged</div>
+        <ul class="reasoning-list" id="reasoning-list"></ul>
+      </div>
       <div class="verdict-actions">
         <button id="mark-phishing" class="danger" hidden>Mark as phishing</button>
         <span id="action-note" class="action-note muted" hidden></span>
