--- a/src/taskpane.html
+++ b/src/taskpane.html
@@ -54,7 +54,7 @@
         <h2>Reasoning</h2>
         <span id="status" class="status muted">Ready.</span>
       </div>
-      <pre id="result" class="result" aria-live="polite"></pre>
+      <div id="result" class="result" aria-live="polite"></div>
     </section>
 
     <script src="taskpane.js"></script>
